# electricity_predictor

./: .gitignore  Dockerfile  README.md  data.dvc  pyproject.toml  pytest.ini
.dvc/: config
.github/workflows/: ci-cd.yml  client-ci-cd.yml  data-pipeline.yml  metrics-pipeline.yml  service-ci-cd.yml  test.yml  train-pipeline.yml
gx/: great_expectations.yml
gx/checkpoints/: price_data_checkpoint.yml  production_cross_data_checkpoint.yml  production_fossil_data_checkpoint.yml  production_hydro_data_checkpoint.yml  production_nuclear_data_checkpoint.yml
gx/expectations/: .ge_store_backend_id  price_data_suite.json  production_cross_data_suite.json  production_fossil_data_suite.json  production_hydro_data_suite.json  production_nuclear_data_suite.json
notebooks/: preprocessing.ipynb  preprocessing_price_data.ipynb  preprocessing_production_data.ipynb  train.ipynb  train_price.ipynb  train_production.ipynb
reports/price/: latest_metrics.txt  production_metrics.txt
reports/production_cross/: latest_metrics.txt  production_metrics.txt
reports/production_fossil/: latest_metrics.txt  production_metrics.txt
reports/production_hydro/: latest_metrics.txt  production_metrics.txt
reports/production_nuclear/: latest_metrics.txt  production_metrics.txt
reports/sites/: price_data_stability_tests.html  production_cross_data_stability_tests.html  production_fossil_data_stability_tests.html  production_hydro_data_stability_tests.html  production_nuclear_data_stability_tests.html
src/: config.py  logger_config.py
src/client/: Dockerfile  package-lock.json  (+1 more)
(+53 files in other folders)
